cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: cloudflared
 namespace: gaming
spec:
 replicas: 1
 selector:
  matchLabels:
   app: cloudflared
 template:
  metadata:
   labels:
    app: cloudflared
  spec:
   containers:
   - name: cloudflared
     image: cloudflare/cloudflared:latest
     args:
     - tunnel
     - --no-autoupdate
     - run
     - --token
     - $(TUNNEL_TOKEN)
