storage-test.yaml
apiVersion: v1
kind: Pod
metadata:
 name: storage-pod
spec:
 containers:
 - name: writer
   image: nginx
   volumeMounts:
   - mountPath: "/usr/share/nginx/html"
     name: my-storage
 volumes:
 - name: my-storage
   persistentVolumeClaim:
     claimName: my-test-pvc
