wireguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
      - name: wireguard
        image: ghcr.io/wg-easy/wg-easy
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
              - SYS_MODULE
        ports:
        - containerPort: 51820
          name: wireguard
          protocol: UDP
        - containerPort: 51821
          name: web-ui
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/wireguard
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: wireguard-config
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-service
  namespace: networking
  annotations:
    metallb.universe.tf/allow-shared-ip: "wireguard-svc" # <--- Unique sharing key
spec:
  selector:
    app: wireguard
  type: LoadBalancer
  loadBalancerIP: "192.168.30.196" # <--- CHOOSE A UNIQUE IP IN YOUR POOL
  ports:
    - port: 51820
      targetPort: 51820
      protocol: UDP
      name: wireguard
    - port: 51821
      targetPort: 51821
      protocol: TCP
      name: web-ui
